[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benchjoe"
version = "0.1.0"
description = "CyberGym tasks run like an average Claude Code user — no isolation, no proxy, no permission controls"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio"]

[project.scripts]
benchjoe = "benchjoe.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchjoe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
tmp_path_retention_policy = "none"
